tests/ui/type-alias-impl-trait/coherence/coherence_cross_crate.stderr
error[E0119]: conflicting implementations of trait `OtherTrait` for type `Alias`
  --> $DIR/coherence_cross_crate.rs:22:1
   |
LL | impl OtherTrait for Alias {}
   | ------------------------- first implementation here
LL | impl OtherTrait for i32 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Alias`
   |
   = note: upstream crates may add a new impl of trait `coherence_cross_crate_trait_decl::SomeTrait` for type `i32` in future versions

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
